--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "homepage": "https://imię.github.io/Book-Tracking-App",
+  
   "dependencies": {
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
